Add custom advancements